[package]
name = "content-lake-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
content-lake-groq = { path = "../groq" }

sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
